; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/kadm5/extr_context_s.c_set_socket_name.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/kadm5/extr_context_s.c_set_socket_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_un = type { i32, i32 }

@AF_UNIX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.sockaddr_un*)* @set_socket_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_socket_name(i32 %0, %struct.sockaddr_un* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sockaddr_un*, align 8
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.sockaddr_un* %1, %struct.sockaddr_un** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call i8* @kadm5_log_signal_socket(i32 %6)
  store i8* %7, i8** %5, align 8
  %8 = load %struct.sockaddr_un*, %struct.sockaddr_un** %4, align 8
  %9 = call i32 @memset(%struct.sockaddr_un* %8, i32 0, i32 8)
  %10 = load i32, i32* @AF_UNIX, align 4
  %11 = load %struct.sockaddr_un*, %struct.sockaddr_un** %4, align 8
  %12 = getelementptr inbounds %struct.sockaddr_un, %struct.sockaddr_un* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  %13 = load %struct.sockaddr_un*, %struct.sockaddr_un** %4, align 8
  %14 = getelementptr inbounds %struct.sockaddr_un, %struct.sockaddr_un* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @strlcpy(i32 %15, i8* %16, i32 4)
  ret void
}

declare dso_local i8* @kadm5_log_signal_socket(i32) #1

declare dso_local i32 @memset(%struct.sockaddr_un*, i32, i32) #1

declare dso_local i32 @strlcpy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
